# fast_ntt_pyo3

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test.py
src/: lib.rs
src/ntt/: domain.rs  fields.rs  mod.rs
test/: evals_2pow10.tar.xz  poly_coeffs_2pow10.tar.xz
