[package]
name = "fast_ntt_pyo3"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "num-bigint"] }
num-bigint = { version = "0.4", features = ["serde"], optional = true }
num-traits = "0.2"
ark-std = "0.4"
ark-ff = { version = "0.4", features = ["asm"] }
ark-serialize = "0.4"
ark-crypto-primitives = { version = "0.4", features = ["merkle_tree"] }
ark-poly = "0.4"
ark-test-curves = { version = "0.4", features = ["bls12_381_curve"] }
derivative = { version = "2", features = ["use_core"] }
blake3 = "1.5.0"
blake2 = "0.10"
sha3 = "0.10"
rand = "0.8"
rayon = { version = "1.8", optional = true }
clap = { version = "4.4.17", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
poseidon-paramgen = "0.4"
itertools = "0.13.0"

[profile.release]
debug = true

[features]
default = ["num-bigint"]
fills = []
parallel = ["rayon", "ark-ff/parallel", "ark-crypto-primitives/parallel"]

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
